Fix collapse rows

--- a/public/css/common.css
+++ b/public/css/common.css
@@ -154,17 +154,13 @@ div.main-container .header {
     font-size: 16px;
 }
 
-div.main-container > a {
+div.main-container a {
     text-decoration: inherit;
     color: inherit;
 }
 
-div.main-container > a > .row {
+div.main-container > .row {
     border-bottom: solid var(--dark-grey) 2px;
-}
-
-div.main-container.dispatch > a > .row {
-    cursor: default;
 }
 
 div.main-container.with-ground > .row:first-child {
